<resources>
    <string name="app_name">DeclarApp</string>

    <string name="skip">Sari peste</string>

    <string name="light">Luminată</string>
    <string name="dark">Întunecată</string>
    <string name="system_default">Automată</string>

    <string name="forms">Formulare</string>

    <string name="statement_short_title">Declarație</string>
    <string name="statement">Declarație pe proprie răspundere</string>
    <string name="new_form">Formular nou</string>

    <string name="next">Următorul pas</string>
    <string name="generate">Generează</string>

    <string name="more">Opțiuni</string>
    <string name="change_theme">Schimbă tema</string>
    <string name="view_source_code">Vizualizează codul sursă</string>
    <string name="contact">Contactează-mă</string>
    <string name="share">Distribuie aplicația</string>
    <string name="review">Scrie o recenzie pe Google Play</string>
    <string name="buy_me_a_coffee">Fă-mi cinste cu o cafea!</string>

    <string name="choose_theme">Alege tema</string>
    <string name="print">Tipărește</string>

    <string name="statement_type_step_label">1. Tipul declarației</string>

    <string name="statement_personal_data_step_label">2. Datele tale</string>
    <string name="last_name">Nume</string>
    <string name="first_name">Prenume</string>
    <string name="address">Adresa actuală</string>
    <string name="birth_date">Data nașterii</string>
    <string name="location">Domiciliul</string>
    <string name="current_location">Reședința în fapt</string>
    <string name="birthday_location">Localitatea nașterii</string>

    <string name="statement_route_data_step_label">3. Datele deplasării:</string>
    <string name="route">Traseul deplasării</string>
    <string name="route_helper">Locurile în care te deplasezi</string>
    <string name="motive">Motivul</string>

    <string name="motive_professional_interests">Interes profesional</string>
    <string name="motive_medical_assistance">Asistență medicală care nu poate fi amânată și nici realizată de la distanță</string>
    <string name="motive_purchase_of_medication">Achiziționarea de medicamente</string>
    <string name="motive_help">Îngrijirea/însoțirea copilului și/sau asistența persoanelor vârstnice, bolnave sau cu dizabilități</string>
    <string name="motive_family_decease">Deces al unui membru al familiei</string>

    <string name="date">Data deplasării</string>
    <string name="signature_step_label">4. Semnătura</string>
    <string name="delete">Șterge</string>
    <string name="no_documents_desc">Nu există formulare salvate!\nCreează unul nou.</string>
    <string name="delete_title">Ștergere formular</string>
    <string name="delete_desc">Sigur doriți să ștergeți acest formular?</string>
    <string name="yes">Da</string>
    <string name="cancel">Anulare</string>
    <string name="onboarding_desc_first">Completează ușor și rapid datele necesare declarației pe proprie răspundere obligatorie conform ordonanțelor militare</string>
    <string name="onboarding_desc_second">Vizualizează, șterge, tipărește sau exportează declarațiile dintr-un singur loc.</string>
    <string name="onboarding_desc_third">Păstrează-ți datele în siguranță tot timpul. Aplicația nu necesită conexiune la internet, toate datele sunt stocate doar pe telefonul tău.</string>
    <string name="start">Începe</string>
    <string name="existing">Actuală</string>
    <string name="new_signature">Nouă</string>
    <string name="form_deleted_message">Formularul a fost șters!</string>
    <string name="undo">Anulează</string>
    <string name="motive_label">Alege motivul/motivele deplasării</string>

    <string name="in_app_purchase_success">Mulțumesc!</string>
    <string name="in_app_purchase_connection_failed">Nu s-a putut conecta la Google Play, încercați din nou!</string>
    <string name="in_app_purchase_error">Achiziția a eșuat</string>
    <string name="in_app_purchase_pending">Achiziția este în stare suspendat, se aşteaptă aprobarea.</string>
    <string name="update_date">Actualizează data</string>
    <string name="statement_date_updated">Data deplasării a fost actualizată</string>
    <string name="company_location">Localitatea sediului</string>
    <string name="company_addresses">Adresa punctului de lucru</string>
    <string name="company_addresses_helper">Se pot menționa multiple adrese</string>

    <string name="statement_interval_text">în declarații, că mă deplasez în afara locuinței, în intervalul orar %d.00 – 05.00, din următorul/</string>
    <string name="statement_type_night_time_movement">Deplasare în intervalele orare restricţionate</string>
    <string name="statement_type_quarantined">Deplasare în zonă carantinată</string>
    <string name="night_time_statement_one_desc">pentru localitățile care depășesc rata de incidență de 4‰ (necesar pentru zilele de vineri, sâmbătă și duminică), respectiv 7,5‰ (necesar în toate zilele săptămânii)</string>
    <string name="night_time_statement_one_interval">Interval orar 20:00 – 05:00</string>

    <string name="night_time_statement_two_desc">pentru toate localitățile, indiferent de rata de incidență (nivelul de răspândire a virusului)</string>
    <string name="night_time_statement_two_interval">Interval orar 22:00 – 05:00</string>
    <string name="feature_coming_soon">Disponibil în curând! Suportă dezvoltarea aplicației.</string>

</resources>