<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class=".StatementRouteDataBinding">

        <variable
            name="viewModel"
            type="com.arthurnagy.staysafe.feature.newdocument.statement.routedata.StatementRouteDataViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:paddingTopSystemWindowInsets="@{true}">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionGroup="true"
            android:transitionName="@string/transition_toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back_24dp"
            app:title="@null">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/new_form"
                android:textAppearance="?attr/textAppearanceHeadline6" />
        </com.google.android.material.appbar.MaterialToolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:background="?attr/colorSurface"
            android:clipToPadding="false"
            android:fillViewport="true"
            android:paddingTop="@dimen/first_keyline"
            android:paddingBottom="@dimen/third_keyline">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                app:paddingBottomSystemWindowInsets="@{true}">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guide_start"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/first_keyline" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guide_start_checkbox"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="10dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guide_end"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/first_keyline" />

                <TextView
                    android:id="@+id/step_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/statement_route_data_label"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    app:layout_constraintEnd_toEndOf="@id/guide_end"
                    app:layout_constraintStart_toStartOf="@id/guide_start"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/motive_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/first_keyline"
                    android:text="@string/motive_label"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    android:textColor="?attr/colorSecondary"
                    app:layout_constraintStart_toStartOf="@id/guide_start"
                    app:layout_constraintTop_toBottomOf="@id/step_label" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/motive_professional_interests"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:onCheckedChanged="@{(_, isChecked) -> viewModel.onMotiveSelected(isChecked, 0)}"
                    android:text="@string/motive_professional_interests"
                    app:layout_constraintEnd_toEndOf="@id/guide_end"
                    app:layout_constraintStart_toStartOf="@id/guide_start_checkbox"
                    app:layout_constraintTop_toBottomOf="@id/motive_label"
                    app:motiveChecked="@{viewModel.motiveItems[0]}" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/company_location"
                    isVisible="@{viewModel.displayWorkData}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/company_location"
                    app:layout_constraintEnd_toEndOf="@id/guide_end"
                    app:layout_constraintStart_toStartOf="@id/guide_start"
                    app:layout_constraintTop_toBottomOf="@id/motive_professional_interests">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:text="@={viewModel.workLocation}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/company_addresses"
                    isVisible="@{viewModel.displayWorkData}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_margin"
                    android:hint="@string/company_addresses"
                    app:counterEnabled="true"
                    app:counterMaxLength="140"
                    app:helperText="@string/company_addresses_helper"
                    app:helperTextEnabled="true"
                    app:layout_constraintEnd_toEndOf="@id/guide_end"
                    app:layout_constraintStart_toStartOf="@id/guide_start"
                    app:layout_constraintTop_toBottomOf="@id/company_location">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine|textPostalAddress|textCapWords"
                        android:text="@={viewModel.workAddresses}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/motive_medical_assistance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:onCheckedChanged="@{(_, isChecked) -> viewModel.onMotiveSelected(isChecked, 1)}"
                    android:text="@string/motive_medical_assistance"
                    app:layout_constraintEnd_toEndOf="@id/guide_end"
                    app:layout_constraintStart_toStartOf="@id/guide_start_checkbox"
                    app:layout_constraintTop_toBottomOf="@id/company_addresses"
                    app:motiveChecked="@{viewModel.motiveItems[1]}" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/motive_purchase_of_medication"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:onCheckedChanged="@{(_, isChecked) -> viewModel.onMotiveSelected(isChecked, 2)}"
                    android:text="@string/motive_purchase_of_medication"
                    app:layout_constraintEnd_toEndOf="@id/guide_end"
                    app:layout_constraintStart_toStartOf="@id/guide_start_checkbox"
                    app:layout_constraintTop_toBottomOf="@id/motive_medical_assistance"
                    app:motiveChecked="@{viewModel.motiveItems[2]}" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/motive_help"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:onCheckedChanged="@{(_, isChecked) -> viewModel.onMotiveSelected(isChecked, 3)}"
                    android:text="@string/motive_help"
                    app:layout_constraintEnd_toEndOf="@id/guide_end"
                    app:layout_constraintStart_toStartOf="@id/guide_start_checkbox"
                    app:layout_constraintTop_toBottomOf="@id/motive_purchase_of_medication"
                    app:motiveChecked="@{viewModel.motiveItems[3]}" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/motive_family_decease"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:onCheckedChanged="@{(_, isChecked) -> viewModel.onMotiveSelected(isChecked, 4)}"
                    android:text="@string/motive_family_decease"
                    app:layout_constraintEnd_toEndOf="@id/guide_end"
                    app:layout_constraintStart_toStartOf="@id/guide_start_checkbox"
                    app:layout_constraintTop_toBottomOf="@id/motive_help"
                    app:motiveChecked="@{viewModel.motiveItems[4]}" />

                <View
                    android:id="@+id/motive_divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/content_margin"
                    android:background="?attr/dividerHorizontal"
                    app:layout_constraintEnd_toEndOf="@id/guide_end"
                    app:layout_constraintStart_toStartOf="@id/guide_start"
                    app:layout_constraintTop_toBottomOf="@id/motive_family_decease" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_margin"
                    android:hint="@string/date"
                    app:layout_constraintEnd_toEndOf="@id/guide_end"
                    app:layout_constraintStart_toStartOf="@id/guide_start"
                    app:layout_constraintTop_toBottomOf="@id/motive_divider">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:text="@{viewModel.dateFormatted}" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/clickable_date"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="@id/date"
                    app:layout_constraintEnd_toEndOf="@id/date"
                    app:layout_constraintStart_toStartOf="@id/date"
                    app:layout_constraintTop_toTopOf="@id/date" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="@dimen/first_keyline"
            android:enabled="@{viewModel.isNextEnabled}"
            android:text="@string/next"
            android:transitionName="@string/transition_action"
            app:layout_marginBottomSystemWindowInsets="@{true}" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>